--- a/portfolio.html
+++ b/portfolio.html
@@ -21,32 +21,45 @@
 <body>
     <!-- Шапка -->
     <header class="page-header">
-        <div class="container header-nav">
-            <nav class="page-nav">
-                <a href="./index.html" class="header-logo"><span class="logo-first-part">Web</span>Studio</a>
+        <div class="container header">
+            <nav class="header-navigation">
+                <a href="./index.html" class="logo page-header_logo">
+                    <span class="logo__prefix">Web</span>Studio
+                </a>
 
-                <ul class="site-nav list">
-                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                    <li class="item"><a href="#portfolio-footer" class="link"> Контакты</a></li>
+                <ul class="navigation list">
+                    <li class="navigation__item">
+                        <a href="./index.html" class="navigation__link">Студия</a>
+                    </li>
+
+                    <li class="navigation__item">
+                        <a href="./portfolio.html" class="navigation__link navigation__link--current">Портфолио</a>
+                    </li>
+
+                    <li class="navigation__item">
+                        <a href="#portfolio-footer" class="navigation__link"> Контакты</a>
+                    </li>
                 </ul>
             </nav>
 
             <ul class="header-contact list">
-                <li class="item">
-                    <a href="mailto:info@devstudio.com" class="link mail">
-                        <div class="thumb">
-                            <svg class="icon" width="16" height="12">
+                <li class="header-contact__item">
+                    <a href="mailto:info@devstudio.com" class="header-contact__link">
+
+                        <div class="header-contact__thumb">
+                            <svg class="header-contact__icon" width="16" height="12">
                                 <use href="./images/sprite.svg#icon-mail"></use>
                             </svg>
                         </div>
                         info@devstudio.com
                     </a>
                 </li>
-                <li class=" item">
-                    <a href="tel:+380961111111" class="link tel">
-                        <div class="thumb">
-                            <svg class="icon" width="10" height="16">
+
+                <li class="header-contact__item">
+                    <a href="tel:+380961111111" class="header-contact__link">
+
+                        <div class="header-contact__thumb">
+                            <svg class="header-contact__icon" width="10" height="16">
                                 <use href="./images/sprite.svg#icon-smartphone"></use>
                             </svg>
                         </div>
@@ -54,7 +67,9 @@
 
                     </a>
                 </li>
+
             </ul>
+
         </div>
     </header>
 
@@ -246,7 +261,9 @@
     <footer class="page-footer" id="portfolio-footer">
         <div class="container footer">
             <div>
-                <a href="./index.html" class="footer-logo"><span class="logo-first-part">Web</span>Studio</a>
+                <a href="./index.html" class="logo page-footer_logo">
+                    <span class="logo__prefix">Web</span>Studio
+                </a>
 
                 <address>
                     <ul class="footer-contact list">
