Correct portfolio.html According to BEM

--- a/index.html
+++ b/index.html
@@ -469,38 +469,37 @@
                                 class="social-links__link social-links__link--footer">
                                 <div class="social-links__thumb">
                                     <svg width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-social-logo-instagram">
-                                        </use>
+                                        <use href="./images/sprite.svg#icon-social-logo-instagram"> </use>
                                     </svg>
                                 </div>
                             </a>
                         </li>
-                        <li class="item">
-                            <a href="https://twitter.com/" target="_blank" class="link">
-                                <div class="thumb">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-social-logo-twitter">
-                                        </use>
+                        <li class="social-links__item">
+                            <a href="https://twitter.com/" target="_blank"
+                                class="social-links__link social-links__link--footer">
+                                <div class="social-links__thumb">
+                                    <svg width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-social-logo-twitter"> </use>
                                     </svg>
                                 </div>
                             </a>
                         </li>
-                        <li class="item">
-                            <a href="https://www.facebook.com/" target="_blank" class="link">
-                                <div class="thumb">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-social-logo-facebook">
-                                        </use>
+                        <li class="social-links__item">
+                            <a href="https://www.facebook.com/" target="_blank"
+                                class="social-links__link social-links__link--footer">
+                                <div class="social-links__thumb">
+                                    <svg width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-social-logo-facebook"> </use>
                                     </svg>
                                 </div>
                             </a>
                         </li>
-                        <li class="item">
-                            <a href="https://www.linkedin.com/" target="_blank" class="link">
-                                <div class="thumb">
-                                    <svg class="icon" width="20" height="20">
-                                        <use href="./images/sprite.svg#icon-social-logo-linkedin">
-                                        </use>
+                        <li class="social-links__item">
+                            <a href="https://www.linkedin.com/" target="_blank"
+                                class="social-links__link social-links__link--footer">
+                                <div class="social-links__thumb">
+                                    <svg width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-social-logo-linkedin"> </use>
                                     </svg>
                                 </div>
                             </a>
