Refactoring CSS into SASS

--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 
 </head>
 
@@ -28,7 +25,7 @@
                     <span class="logo__prefix">Web</span>Studio
                 </a>
 
-                <ul class="navigation list">
+                <ul class="navigation">
                     <li class="navigation__item">
                         <a href="./index.html" class="navigation__link navigation__link--current">Студия</a>
                     </li>
@@ -43,7 +40,7 @@
                 </ul>
             </nav>
 
-            <ul class="header-contact list">
+            <ul class="header-contact">
                 <li class="header-contact__item">
                     <a href="mailto:info@devstudio.com" class="header-contact__link">
 
@@ -89,7 +86,7 @@
             <div class="container">
                 <!-- Скрытый заголовок -->
                 <h2 class="section__title section__title--hidden">ОСОБЕННОСТИ</h2>
-                <ul class="peculiarities-list list">
+                <ul class="peculiarities-list">
                     <li class="peculiarities-list__item">
                         <div class="peculiarities-list__thumb">
                             <svg width="70" height="70">
@@ -143,7 +140,7 @@
         <section class="section work">
             <div class="container">
                 <h2 class="section__title">Чем мы занимаемся</h2>
-                <ul class="work-list list">
+                <ul class="work-list">
 
                     <li class="work-list__item">
                         <img src="./images/box1.jpg" alt="Написание веб сайтов" width="370" height="294">
@@ -174,14 +171,14 @@
         <section class=" section team">
             <div class="container">
                 <h2 class="section__title">Наша команда</h2>
-                <ul class="team-list list">
+                <ul class="team-list">
                     <li class="team-list__item">
                         <img src="./images/person1.jpg" class="team-list__img" alt="Сотрудник" width="270" height="260">
                         <h3 class="team-list__title">Игорь Демьяненко</h3>
                         <p class="team-list__text" lang="en">Product Designer</p>
 
                         <div class="team-social">
-                            <ul class="social-links list">
+                            <ul class="social-links">
                                 <li class="social-links__item">
                                     <a href="https://www.instagram.com/" target="_blank" class="social-links__link">
                                         <div class="social-links__thumb">
@@ -231,7 +228,7 @@
                         <p class="team-list__text" lang="en">Frontend Developer</p>
 
                         <div class="team-social">
-                            <ul class="social-links list">
+                            <ul class="social-links">
                                 <li class="social-links__item">
                                     <a href="https://www.instagram.com/" target="_blank" class="social-links__link">
                                         <div class="social-links__thumb">
@@ -281,7 +278,7 @@
                         <p class="team-list__text" lang="en">Marketing</p>
 
                         <div class="team-social">
-                            <ul class="social-links list">
+                            <ul class="social-links">
                                 <li class="social-links__item">
                                     <a href="https://www.instagram.com/" target="_blank" class="social-links__link">
                                         <div class="social-links__thumb">
@@ -331,7 +328,7 @@
                         <p class="team-list__text" lang="en">UI Designer</p>
 
                         <div class="team-social">
-                            <ul class="social-links list">
+                            <ul class="social-links">
                                 <li class="social-links__item">
                                     <a href="https://www.instagram.com/" target="_blank" class="social-links__link">
                                         <div class="social-links__thumb">
@@ -382,7 +379,7 @@
         <section class="section client">
             <div class="container">
                 <h2 class="section__title">Постоянные клиенты</h2>
-                <ul class="client-list list">
+                <ul class="client-list">
                     <li class="client-list__item">
                         <div class="client-list__thumb">
                             <svg width="106" height="60">
@@ -463,7 +460,7 @@
             <div class="footer-connect">
                 <p class="footer-connect__title">ПРИСОЕДЕНЯЙТЕСЬ</p>
                 <div class="footer-connect__thumb">
-                    <ul class="social-links list">
+                    <ul class="social-links">
                         <li class="social-links__item">
                             <a href="https://www.instagram.com/" target="_blank"
                                 class="social-links__link social-links__link--footer">
