--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -27,7 +24,7 @@
                     <span class="logo__prefix">Web</span>Studio
                 </a>
 
-                <ul class="navigation list">
+                <ul class="navigation">
                     <li class="navigation__item">
                         <a href="./index.html" class="navigation__link">Студия</a>
                     </li>
@@ -42,7 +39,7 @@
                 </ul>
             </nav>
 
-            <ul class="header-contact list">
+            <ul class="header-contact">
                 <li class="header-contact__item">
                     <a href="mailto:info@devstudio.com" class="header-contact__link">
 
@@ -93,7 +90,7 @@
                 </ul>
 
                 <div>
-                    <ul class="portfolio-project list">
+                    <ul class="portfolio-project">
                         <li class="portfolio-project__item">
                             <a href="" class="portfolio-project__link">
                                 <div class="portfolio-project__card-img">
@@ -293,7 +290,7 @@
                 </a>
 
                 <address class="address">
-                    <ul class="footer-contact list">
+                    <ul class="footer-contact">
                         <li class="footer-contact__item">
                             <p class="footer-contact__address">г. Киев, пр-т Леси Украинки, 26</p>
                         </li>
@@ -312,7 +309,7 @@
             <div class="footer-connect">
                 <p class="footer-connect__title">ПРИСОЕДЕНЯЙТЕСЬ</p>
                 <div class="footer-connect__thumb">
-                    <ul class="social-links list">
+                    <ul class="social-links">
                         <li class="social-links__item">
                             <a href="https://www.instagram.com/" target="_blank"
                                 class="social-links__link social-links__link--footer">
